# idp_processor

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_global_prompt.py  test_quality.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
scripts/: clean.sh  format.sh  lint.sh  make_executable.sh  run_folder.sh  setup.sh  test.sh
src/idp_extractor/: __init__.py  cli.py  config.py  extractor.py
src/idp_extractor/connector/: base.py  llmaas.py  local_connector.py
src/idp_extractor/document/: __init__.py  extraction_result.py  passport.py
src/idp_extractor/metrics/: __init__.py  models.py
src/idp_extractor/prompts/: __init__.py  base.py  global.py
src/idp_extractor/prompts/passeport/: v1.py
src/idp_extractor/quality/: quality.py
tests/: test_models.py
